mule-user-guide/v/3.4/global-settings-configuration-reference.adoc
= 全局设置配置参考

此页面提供有关在Mule配置的根级配置的全局设置的详细信息。其中一些信息直接从`mule.xsd`中提取并进行缓存。如果信息看起来已过时，请刷新页面。有关配置的更多信息，请参阅 link:/mule-user-guide/v/3.4/about-mule-configuration[关于Mule配置]。有关线程配置文件的信息，请参阅 link:/mule-user-guide/v/3.4/tuning-performance[调整性能]。

== 配置

指定Mule实例的默认值和常规设置。

<configuration...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
| defaultResponseTimeout  |字符串 |否 | 10000  |等待同步响应的默认周期（毫秒）。
| defaultTransactionTimeout  |字符串 |否 | 30000  |事务的默认超时（毫秒）。这也可以在事务中进行配置，在这种情况下使用事务配置而不是此默认值。
| defaultExceptionStrategy-ref  |字符串 |否 |   |每个流/服务的默认异常策略。这必须是对全球例外战略的参考。
| shutdownTimeout  |整数 |否 | 5000  |（从Mule 2.2.2开始）等待任何正在进行的消息的时间（以毫秒为单位）在Mule关闭之前完成处理。达到此阈值后，Mule开始中断线程，并且可能丢失消息。如果在同一个Mule实例中有大量服务，如果组件的处理时间超过几秒，或者如果您使用的是大型有效负载和/或较慢的传输，则应该增加此值以允许更多时间适度关机。您指定的值将应用于服务并单独发送到调度程序，因此默认值为5000毫秒指定Mule在启动关机后优雅地处理和分派消息10秒。
向后兼容标志：用于禁用在Mule 3.3中引入的新的扩展转换支持，包括强制转换，隐式转换和不直接转换器查找。
| flowEndingWithOneWayEndpointReturnsNull  |布尔值 |否 | false  |向后兼容标志：用于恢复单向出站端点的Mule 3.2行为请求 - 响应流中的最后一个元素。当为真时，端点返回的值将为空，否则将是接收事件的回声。
| enricherPropagatesSessionVariableChanges  |布尔值 |否 | false  |向后兼容标志：用于恢复消息richher的Mule 3.1 / 3.2行为，以便会话变量在浓缩器内添加或修改的过程被传播到使用浓缩器的流程中。
|===

<configuration...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|默认线程配置文件 | 0..1  |默认线程配置文件，如果没有给出更具体的配置，组件和端点将使用该配置文件进行调度和接收。
| default-dispatcher-threading-profile  | 0..1  |默认的调度线程配置文件，用于修改默认线程配置文件值并由端点用于分派消息。这也可以在连接器上配置，在这种情况下使用连接器配置而不是此默认设置。
| default-receiver-threading-profile  | 0..1  |默认接收线程配置文件，它修改默认线程配置文件值并被端点用于接收消息。这也可以在连接器上配置，在这种情况下使用连接器配置而不是此默认设置。
| default-service-threading-profile  | 0..1  |默认服务线程配置文件，用于修改默认线程配置文件并被服务用于处理消息。这也可以在模型或服务上进行配置，在这种情况下，将使用这些配置来代替此默认设置。
| abstract-reconnection-strategy  | 0..1  |连接器和端点使用的默认重新连接策略。这也可以在连接器上配置，在这种情况下使用连接器配置而不是此默认设置。重新连接策略元素的占位符。重新连接策略定义了Mule应该如何尝试处理连接失败。
|表达式语言 | 0..1  |配置Mule表达式语言
|===
